application/web/test/src/main/java/com/tekgs/nextgen/tekegg/view/error/ErrorViewCalibratable.java
package com.tekgs.nextgen.tekegg.view.error;

public interface ErrorViewCalibratable {
 String get404ErrorMessage();
}
